--- a/Projects/App/Resources/Plist/ApiContent.plist
+++ b/Projects/App/Resources/Plist/ApiContent.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>URL</key>
-	<string>http://3.39.239.127</string>
+	<string>http://babyaapi.xn--2q1b39m2ui.site</string>
 </dict>
 </plist>
