--- a/Projects/App/Support/Info.plist
+++ b/Projects/App/Support/Info.plist
@@ -22,6 +22,8 @@
 	<string>1.0.2</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>KAKAO_REST_API_KEY</key>
+	<string>f17c5213dcde26e0a86aaf5eb4d4a35a</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -29,6 +31,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>주변의 병원을 조회하기 위해 위치 정보가 필요합니다.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Pretendard-Regular.otf</string>
